# openpaw-firmware

./: partitions.csv  sdkconfig.defaults
.github/workflows/: discord-notify.yml  firmware-release.yml
components/ESP32_VL53L0X/inc/: VL53L0X.h
main/: CMakeLists.txt  app_main.c  app_main.cpp  idf_component.yml
